# DataProvider

./: .editorconfig  .gitignore  Agents.md  CLAUDE.md  CONTRIBUTING.md  CodeAnalysis.ruleset  DataProvider.sln  Directory.Build.props  Makefile  PR.md  README.md  coverage-thresholds.json  coverlet.runsettings  docker-compose.postgres.yml  opencode.json  package-lock.json
.clinerules/: 00-read-instructions.md
.config/: dotnet-tools.json
.devcontainer/: devcontainer.json  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-lql-website.yml  deploy-pages.yml  deploy-website.yml  release.yml
Conduit/: README.md
Conduit/Conduit/: BuiltInBehaviors.cs  Conduit.csproj  (+9 more)
Conduit/Conduit.Tests/: Conduit.Tests.csproj  DispatcherTests.cs
DataProvider/: README.md
Docs/: AIWorkScheduler.Spec.md
Gatekeeper/: README.md  spec.md
Lql/: README.md  TypeProviderTest.fsx
Lql/lql-lsp-rust/crates/lql-lsp/: Cargo.toml
Lql/lql-lsp-rust/crates/lql-lsp/src/: ai.rs  db.rs  main.rs
Lql/lql-lsp-rust/crates/lql-lsp/tests/: lsp_protocol.rs
Migration/: README.md  migration_exe_spec.md  spec.md
Reporting/: spec.md
Samples/: .editorconfig  Healthcare.Sync.http  readme.md  start-local.sh  start.sh
Sync/: README.md  docker-compose.yml  init-postgres.sql  spec.md
Tests.Shared/: PostgresCollection.cs  PostgresContainerFixture.cs
Website/: DataProvider-Design-System.md  eleventy.config.js  package-lock.json  package.json  playwright.config.ts  spec.md  tsconfig.json
tools/: LqlBuildValidator.cs  LqlBuildValidator.csproj  ValidateLql.targets
(+1403 files in other folders)
